@@ -8,12 +8,15 @@ use warnings;
 class Finance::Dogecoin::Utils::ProxyActions {
     use JSON;
     use Path::Tiny;
+    use Digest::MD5 'md5_hex';
+
     use feature 'say';
 
     field $rpc          :param;
     field $json         :param;
     field $addresses    :param;
     field $address_file :param;
+    field $conf_dir     :param;
 
     sub BUILDARGS( $class, %args ) {
         $args{json} //= JSON->new->utf8(1);
@@ -45,6 +48,26 @@ class Finance::Dogecoin::Utils::ProxyActions {
         };
 
         return 1;
+    }
+
+    method exportaddresses {
+        my $dumpfile = md5_hex( $$ . time() );
+        my $result   = $rpc->call_method( 'dumpwallet', $dumpfile );
+
+        my $file     = $conf_dir->child($dumpfile);
+
+        for my $line ($file->lines_utf8) {
+            # skip header, blank, and comment lines
+            next unless $line =~ /\S/;
+            next if     $line =~ /^#/;
+
+            my ($private_key, $timestamp, $label, $comment, @rest) = split /\s+/, $line;
+
+            for my $rest (@rest) {
+                next unless $rest =~ /^addr=(\S+)/;
+                say $1;
+            }
+        }
     }
 
     method DESTROY {
